--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Android Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -10,21 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout source code
       - name: Checkout source
         uses: actions/checkout@v4
 
+      # 2. Set up JDK (Android requires Java 17 for modern Gradle/SDK)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission for Gradle
-        run: chmod +x ./gradlew
+      # 3. Set up Gradle (system installation, since you don’t have gradlew)
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v3
 
+      # 4. Build Debug APK
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: gradle assembleDebug
 
+      # 5. Upload APK to workflow artifacts
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
